Added file and string responses
Fixed a bunch of bugs, responses primarily done

--- a/voyager-lib/voyager-lib.csproj
+++ b/voyager-lib/voyager-lib.csproj
@@ -30,6 +30,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Runtime.Serialization" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -45,6 +46,7 @@
     <Compile Include="Server.cs" />
     <Compile Include="Response.cs" />
     <Compile Include="Events\RequestedEvent.cs" />
+    <Compile Include="Http\HttpContentType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
