--- a/voyager-lib/voyager-lib.csproj
+++ b/voyager-lib/voyager-lib.csproj
@@ -31,6 +31,9 @@
     <Reference Include="System" />
     <Reference Include="System.Web" />
     <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.WebRequest" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
