--- a/voyager-server/voyager-server.csproj
+++ b/voyager-server/voyager-server.csproj
@@ -41,12 +41,12 @@
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.WebRequest" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Voyager.cs" />
     <Compile Include="Routes\v1.cs" />
-    <Compile Include="Data\HackathonData.cs" />
     <Compile Include="Data\LocationData.cs" />
     <Compile Include="Services\Eventbrite\EBService.cs" />
     <Compile Include="Services\Eventbrite\EBSearchData.cs" />
@@ -62,6 +62,9 @@
     <Compile Include="Services\Eventbrite\EBCategory.cs" />
     <Compile Include="Services\Eventbrite\EBFormat.cs" />
     <Compile Include="Services\Eventbrite\EBTicketClass.cs" />
+    <Compile Include="Data\EventData.cs" />
+    <Compile Include="Cache.cs" />
+    <Compile Include="Services\Weathermap\WMService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
@@ -76,6 +79,7 @@
     <Folder Include="Services\" />
     <Folder Include="Services\Eventbrite\" />
     <Folder Include="Services\Common\" />
+    <Folder Include="Services\Weathermap\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
